flux/apps/plex/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-01
      containers:
        - name: plex
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
          image: lscr.io/linuxserver/plex:latest
          ports:
            - containerPort: 32400
          resources:
            requests:
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - mountPath: /media/tv
              name: media-tv-volume
            - mountPath: /media/movies
              name: media-movies-volume
            - mountPath: /dev/dri
              name: dri-device
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: media-tv-volume
          persistentVolumeClaim:
            claimName: plex-media-tv-pvc
        - name: media-movies-volume
          persistentVolumeClaim:
            claimName: plex-media-movies-pvc
        - name: dri-device
          hostPath:
            path: /dev/dri
