flux/apps/plex/base/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-external
  namespace: plex
spec:
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
  type: LoadBalancer
  loadBalancerIP: 192.168.0.102
