flux/apps/plex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "alarlab.dev"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plex.alarlab.dev
    secretName: plex-tls
  rules:
  - host: plex.alarlab.dev 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-external
            port:
              number: 32400
  - host: plex.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-service
            port:
              number: 32400
